@@ -1,8 +1,11 @@
 # ViPER4FX
 
-## With additional tweaks for more compatibility
+### With additional tweaks for more compatibility
 
 1. deep_buffer and raw removal for more compatibility;
 2. Fix /system/vendor/etc/audio_effects.conf for OnePlus3 ROMs;
 3. Set props by resetprop, introduced in Magisk v9;
 4. Install ViPER app automatically during boot;
+
+### Support Link
+http://forum.xda-developers.com/showthread.php?t=2191223
