@@ -1,7 +1,7 @@
 id=v4a
 name=ViPERFX
 version=v2.5.0.5
-versionCode=4
+versionCode=5
 author=ViPER’s Audio
 description=Popular sound mod by ViPER’s Audio, ported to Magisk by topjohnwu, adapted by laggardkernel for more compatibility
 support=http://www.audlabs.com/download.html
