@@ -10,3 +10,5 @@ v4
     - Update library to v2.5.0.5
     - http://www.audlabs.com/dists/ViPERFX_v2.5.0.5.apk
     - Install ViPERFX app automatically during boot 
+v5
+    - Scripts improvement, tweakprop compatible
